# AIDevelopementToolkit

./: .gitignore  404.html  LICENSE  README.md  index.html  objects.inv  properdocs.yaml  pyproject.toml  search.html
.github/workflows/: docs.yml  workflow.yml
aidevelopementtoolkit/: boto3_utils.py  general_utils.py  index.html
aidevelopementtoolkit/SUMMARY/: index.html
aidevelopementtoolkit/boto3_utils/: index.html
aidevelopementtoolkit/data_utils/: __init__.py  index.html  metrics.py  preprocessing.py  pydantic_utils.py  statistics.py
aidevelopementtoolkit/data_utils/metrics/: index.html
aidevelopementtoolkit/data_utils/preprocessing/: index.html
aidevelopementtoolkit/general_utils/: index.html
aidevelopementtoolkit/logging_utils/: __init__.py  boto3_utils.py  file_io.py  index.html  logger.py  mlflow_utils.py  plotly_utils.py  printing_utils.py  pyplot_utils.py
aidevelopementtoolkit/logging_utils/file_io/: index.html
aidevelopementtoolkit/logging_utils/logger/: index.html
aidevelopementtoolkit/logging_utils/mlflow_utils/: index.html
aidevelopementtoolkit/logging_utils/printing_utils/: index.html
aidevelopementtoolkit/logging_utils/pyplot_utils/: index.html
aidevelopementtoolkit/torch_utils/: EarlyStopper.py  __init__.py  distributed_torch_utils.py  index.html  model_utils.py
docs/: generate_ref_pages.py  index.md
examples/: mnist_training.py  run_distributed.sh
search/: search_index.json
tests/: file_io_test.py  mlflow_utils_test.py  model_utils_test.py  pyplot_utils_test.py
(+3 files in other folders)
