[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "aidevelopementtoolkit"
version = "0.1.0"
description = "Utilities for AI development workflows with PyTorch, MLflow and other general purpose functions."
readme = "README.md"

authors = [
    {name = "Daniele Bertagnoli"}
]
requires-python = ">=3.12"

dependencies = [
    "boto3>=1.43.53",
    "kaleido>=1.3.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.1",
    "plotly>=6.9.0",
    "tabulate>=0.10.0",
    "torch>=2.13.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.28.0",
    "tqdm>=4.69.0",
]


[tool.setuptools.packages.find]
include = [
    "aidevelopementtoolkit*"
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.7",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings[python]>=1.0.6",
    "properdocs>=1.6.7",
    "properdocs-theme-readthedocs>=1.6.5",
    "psutil>=7.2.2",
]
